# jf_agent

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sonar-project.properties  Dockerfile  Dockerfile.hardened  LICENSE  Pipfile  README.md  _config.yml  compare_jira_output.py  example.yml  license_notices  pyproject.toml  rollback_on_fail.sh  setup.py
.github/workflows/: codeql-analysis.yml  endor.yml  pr-checks.yml  secrets-detect.yml  snyk-monitor.yml  test.yml
docs/: Gemfile  _config.yml  agent-updated.html  agent-updated.md  bitbucket-cloud-setup-guide.html  bitbucket-cloud-setup-guide.md  bitbucket-server-setup-guide.html  bitbucket-server-setup-guide.md  configuration-setup-guide.md  env-var-setup-guide.html  env-var-setup-guide.md  faq.html  faq.md  github-setup-guide.html  github-setup-guide.md  gitlab-setup-guide.html  gitlab-setup-guide.md  index.html  index.md  jira-fields.html  jira-fields.md  jira-setup-guide.html  jira-setup-guide.md  multi-git-setup-guide.html  multi-git-setup-guide.md  network-config-setup-guide.html  network-config-setup-guide.md  package-lock.json  run-agent.html  run-agent.md  sample-commands.html  save-download.html  save-download.md  send-dataset.html  send-dataset.md  setup-guide.html  setup-guide.md  specify-usage.html  specify-usage.md  usage-modes.html  (+3 more)
docs/_layouts/: basic-page-with-footer-links-and-accordion.html  basic-page-with-footer-links.html  basic-page.html  index.html
docs/_setups/: bitbucket-cloud-setup.md  bitbucket-server-setup.md  github-setup.md  gitlab-setup.md  jira-setup.md
docs/_site/: agent-updated.html  bitbucket-cloud-setup-guide.html  bitbucket-server-setup-guide.html  env-var-setup-guide.html  faq.html  github-setup-guide.html  gitlab-setup-guide.html  index.html  jira-fields.html  jira-setup-guide.html  multi-git-setup-guide.html  network-config-setup-guide.html  run-agent.html  save-download.html  send-dataset.html  setup-guide.html  specify-usage.html  usage-modes.html  yaml-config-setup-guide.html
docs/_site/css/: styles.css
docs/_site/js/: scripts.js
docs/css/: styles.css
hooks/: build
jf_agent/: __init__.py  agent_logging.py  bb_download.py  config_file_reader.py  diagnostics.py  exception.py  gh_download.py  github_client.py  jira_download.py  main.py  name_redactor.py  ratelimit.py  rollback_on_fail.py  session.py  util.py  validation.py
jf_agent/data_manifests/: manifest.py
jf_agent/data_manifests/git/: generator.py  manifest.py
jf_agent/data_manifests/git/adapters/: github.py  manifest_adapter.py
jf_agent/data_manifests/jira/: adapter.py  generator.py  manifest.py
jf_agent/git/: __init__.py  bitbucket_cloud_adapter.py  bitbucket_cloud_client.py  bitbucket_server.py  github.py  github_client.py  github_gql_adapter.py  github_gql_client.py  github_gql_utils.py  gitlab_adapter.py  gitlab_client.py  gitlab_v3_client.py  utils.py
jf_agent/gitlab/: __init__.py  download.py
jf_agent/jf_jira/: __init__.py  jira_download.py  utils.py
tests/: test_bitbucket_cloud_adapter.py  test_bitbucket_cloud_client.py  test_bitbucket_server.py  test_config_file.py  test_github.py  test_gitlab_adapter.py  test_jira_download.py  test_main.py  utils.py
tests/test_data/bitbucket_cloud/: test_branches.json  test_commits.json  test_prs.json  test_repos.json
tests/test_data/bitbucket_server/: test_branches.json  test_commits.json  test_projects.json  test_prs.json  test_repos.json  test_users.json
tests/test_data/github/: test_branches.json  test_commits.json  test_projects.json  test_prs.json  test_repos.json  test_users.json
tests/test_data/gitlab/: test_branches.json  test_commits.json  test_groups.json  test_prs.json  test_repos.json  test_users.json
tests/test_data/jira/: test_issues_response.json
