[project]
name = "jf_agent"
version = "0.0.1"
description = "An agent that can run on-premise to download and send data to Jellyfish."
authors = [
    {name = "jellyfish-oss", email = "oss@jellyfish.co"},
]
dependencies = [
    "urllib3>=2.6.3",
    "pyyaml>=4.21b",
    "jira<4,>=3.1.1",
    "tqdm>=4.66.2",
    "stashy",
    "dateparser",
    "jsonstreams",
    "psutil",
    "python-gitlab",
    "click~=8.0.4",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "colorama>=0.4.6",
    "jf-ingest==0.0.247",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {include = ["jf_agent*"]}}

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
target_version = ['py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.circleci
    | \.cache
    | _build
    | buck-out
    | build
    | dist
    | scripts
    | conf
    | docs
    | frontend
  )/
  | \.bash_history$
  | \.eslintrc$
  | \.flake8$
  | Brewfile$
  | Pipfile$
  | Pipfile\.lock$
  | Dockerfile$
  | Makefile$
  | \.dockerignore
  | .*/__pycache__/*
  | .*/migrations/.*\.py
  | \.md$
  | \.ipynb$
  | \.json$
  | \.js$
  | \.yml$
  | \.yaml$
  | \.toml$
  | \.ini$
  | \.txt$
)
'''

[dependency-groups]
dev = [
    "requests-mock",
    "pytest>=7.4.0",
    "black==24.4.2",
    "isort==5.13.2",
    "pre-commit>=3.6.0",
]
